feat(UI): UI components refactored - replaced winidcss with tailwindcss - components rewritten with emotion - added components - initialized storybook in the project - installed some packages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<title>Viterect</title>
 </head>
 <body>
+<div id="portals-root"></div>
 <div id="root"></div>
 <script type="module" src="/src/main.tsx"></script>
 </body>
